[tool.poetry]
name = "cs3321-mocking-example"
version = "0.1.0"
description = "Mocking Example"
authors = ["Ryan Davis <ryancraigdavis@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
pytest = "^7.4.3"
mock = "^5.1.0"
pytest-mock = "^3.12.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
